--- a/src/styles/headerNormal.css
+++ b/src/styles/headerNormal.css
@@ -1,12 +1,13 @@
 .header {
     display: flex;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Lato', sans-serif;
+    font-size: 1.2rem;
     font-weight: 500;
     color: rgb(1, 102, 120);
 }
 
 .header img {
-    width: 20rem;
+    width: 25rem;
     margin-top: 3rem;
     margin-left: 5rem;
 }
