--- a/src/styles/page1.css
+++ b/src/styles/page1.css
@@ -1,3 +1,78 @@
+.welcome {
+    background-image: url('../assets/fondoazul.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: bottom;
+    width: 100%;
+    height: 60rem;
+    position: relative;
+    top: 10rem;
+    z-index: 1;
+}
+
+.divpage1 {
+    position: relative;
+    z-index: 1;
+}
+
+.imgfamilia {
+    position: absolute;
+    z-index: 1;
+    left: 70rem;
+    top: 13rem;
+}
 
 
+.textfamilia2 {
+    position: relative;
+    left: 90rem;
+    bottom: 26rem;
+}
 
+.textfamilia2 p {
+    margin: 0;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 2.3rem;
+    color: rgb(0, 185, 185);
+}
+
+.textfamilia2 h1 {
+    background-color: blueviolet;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 900;
+    border-radius: .5rem;
+    width: max-content;
+    padding: 1rem 1rem 1rem 1rem;
+    color: white;
+}
+
+.textfamilia2:hover{
+    cursor: pointer;
+}
+
+.textp1 {
+    font-family: 'Lato', sans-serif;
+    color: white;
+    margin-left: 10rem;
+    padding-top: 8rem;
+    width: 80rem;
+}
+
+.textp1 h2 {
+    font-size: 6rem;
+    margin: 0;
+}
+
+.textp1 h1 {
+    margin: 0;
+    font-size: 6rem;
+    font-weight: 700;
+}
+
+#big {
+    font-family: 'Montserrat', sans-serif;
+    margin-top: 4rem;
+    margin-left: 2rem;
+    width: 50rem;
+    font-size: 2rem;
+}
