--- a/src/styles/page1.css
+++ b/src/styles/page1.css
@@ -26,7 +26,7 @@
     border: .5rem;
     border-radius: 1rem;
     background-color: rgb(238, 238, 238);
-    box-shadow: -1px -3px 46px 1px rgba(0, 0, 0, 0.75);
+    box-shadow: 10px 130px 33px 0 rgba(255, 255, 255, 0.75)
 }
 
 .imgfamilia {
@@ -77,6 +77,8 @@
     font-size: 6rem;
     margin: 0;
 }
+
+
 
 .textp1 h1 {
     margin: 0;
