--- a/src/styles/page3.css
+++ b/src/styles/page3.css
@@ -1,3 +1,7 @@
+img{
+    max-width: 100%;
+}
+
 .containerp3 {
     margin-top: 5rem;
     background-image: url('../assets/afiliacion_familia.png');
@@ -136,14 +140,17 @@
 
 @media only screen and (max-width: 767px) {
     .containerp3 {
-        background: none;
         margin: 0;
         padding: 0;
+        background-position: right;
     }
 
     .titlep3 {
-        position: static;
-        width: 20rem;
+        width: 20.3rem;
+        background: none;
+        color: rgb(109, 109, 109);
+        left: 0;
+        top: 3rem;
     }
 
     .imagenp3 img {
