--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -70,167 +70,148 @@
     cursor: pointer;
 }
 
-@media(min-width: 1600px) and (max-width: 1700px){
-    .logo{
-        margin-left: 10rem;
-    }
-}
-
-
-
-@media (min-width: 1187px) and (max-width: 1549px) {
+@media (max-width: 767px) {
     .parent {
-        margin-left: 0;
-        margin-top: 82rem;
+        display: flex;
+        flex-direction: column;
+        margin-top: 0;
+        margin-left: 7rem;
+        text-align: center;
+    }
+
+    .parent h2 {
+        font-size: 2.6rem;
+    }
+
+    .parent h3 {
+        font-size: 2rem;
+    }
+
+    .div3 {
+        position: relative;
+        right: 3rem;
     }
 
     .logo {
-        margin-left: 10rem;
-        margin-right: 5rem;
-        margin-top: 80rem;
-    }
-
-    .logo img {
-        width: 20rem;
-    }
-
-    .icons img {
-        width: 3rem;
-    }
-
-    h2 {
-        font-size: 1.5rem;
-    }
-
-    h3 {
-        font-size: 1rem;
-    }
-}
-
-@media (min-width: 950px) and (max-width: 1187px) {
-    .parent {
-        margin-left: 0;
         margin-top: 20rem;
+        margin-right: 0;
+        margin-left: 1.5rem;
+        margin-bottom: 2rem;
     }
 
-
-    .logo {
-        margin-left: 4rem;
-        margin-right: 5rem;
-        margin-top: 20rem;
-    }
-
-    .logo img {
-        width: 16rem;
-    }
-
-    .icons img {
-        width: 2rem;
-    }
-
-    h2 {
-        font-size: 1.5rem;
-    }
-
-    h3 {
-        font-size: 1rem;
-    }
-
-    .div1,
-    .div2 {
-
-        margin-right: 4rem;
-
-    }
-}
-
-@media (max-width: 950px) {
     .footer {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
         background-image: none;
-        background-color: rgb(1, 102, 120);
-        border: 1rem;
-        border-radius: .5rem;
-    }
-
-    .parent {
-        margin-top: 0rem;
-        display: flex;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-    }
-
-    .div1,
-    .div2 {
-        margin-right: 0;
-    }
-
-    .logo {
-        margin-top: 10rem;
-        margin-left: 0rem;
-        margin-right: 0;
-    }
-
-    .logo img {
-        width: 16rem;
-    }
-
-    .icons img {
-        width: 2rem;
-    }
-    h3{
-        margin-bottom: 0;
-        margin-top: 1rem;
+        background-color: rgb(1, 102, 120);
+        ;
     }
 }
 
-@media (max-width: 820px){
-    .parent{
-        margin-left: 2rem;
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+    .parent {
+        display: flex;
+        flex-direction: column;
+        margin-top: 0;
+        margin-left: 18rem;
     }
-    h2{
+
+    .parent h2 {
         font-size: 3rem;
     }
 
-}
+    .div1,
+    .div2 {
+        text-align: center;
+    }
 
-@media (min-width: 1280px) and (max-width: 1600px){
-    .parent{
-        width: max-content;
+    .parent h3 {
+        font-size: 2rem;
     }
-    .logo{
-        margin-left: 5rem;
-    }
-    .div1, .div2{
-        margin-right:5rem ;
-    }
-}
 
-@media (min-width: 1000px) and (max-width: 1200px){
-    .logo{
-        display: none;
+    .div3 {
+        position: relative;
+        right: 1rem;
     }
-    .parent{
-        margin: 0;
-        margin-top: 20rem;
-        margin-left: 6rem;
+
+    .logo {
+        margin-top: 5rem;
+        width: 100rem;
+        margin-bottom: 2rem;
+        margin-left: 14.5rem;
+        margin-right: 0;
     }
-    .footer{
+
+    #logoimg {
+        width: 90rem;
+    }
+
+    .footer {
         background-image: none;
+        flex-direction: column;
         background-color: rgb(1, 102, 120);
     }
 }
 
-@media (min-width: 1500px) and (max-width: 1700px){
-    .logo{
-        margin-left: 6rem;
-        margin-right: 8rem;
+
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+    .parent {
+        display: flex;
+        flex-direction: column;
+        margin-top: 0;
+        margin-left: 28rem;
+    }
+
+    .parent h2 {
+        font-size: 3rem;
+    }
+
+    .div1,
+    .div2 {
+        text-align: center;
+    }
+
+    .parent h3 {
+        font-size: 2rem;
+    }
+
+    .div3 {
+        position: relative;
+        right: 1rem;
+        margin-bottom: 30rem;
+    }
+
+    .logo {
+        margin-top: 5rem;
+        width: 100rem;
+        margin-bottom: 2rem;
+        margin-left: 24rem;
+    }
+
+    #logoimg {
+        width: 90rem;
+    }
+
+    .footer {
+        margin-top: 30rem;
+        height: fit-content;
+        background-image: none;
+        flex-direction: column;
+        background-color: rgb(1, 102, 120);
     }
 }
 
+
+
+@media only screen and (min-width: 1200px) and (max-width: 1700px) {
+    .logo{
+        margin-left: 10rem;
+        margin-right: 5rem;
+    }
+    .div2{
+        margin-right: 5rem;
+    }
+    .parent{
+        margin-top: 76.5rem;
+    }
+}
