--- a/src/styles/headerNormal.css
+++ b/src/styles/headerNormal.css
@@ -51,7 +51,8 @@ a {
 
 
 #iconbar {
-    margin-bottom: 2.8rem;
+    display: none;
+    margin-top: 2rem;
     width: 3.5rem;
 }
 
@@ -59,156 +60,158 @@ a {
     cursor: pointer;
 }
 
-@media (max-width: 500px) {
-    .header img {
-        margin-left: 0;
-    }
-}
-
 @media (max-width: 768px) {
-    .links {
+    #iconbar {
+        display: block;
+        margin: 0;
+        margin-top: 2rem;
+        margin-bottom: 4rem;
+        margin-left: 11rem;
+    }
+
+
+    .hamburguesa {
+        width: max-content;
         display: flex;
         flex-direction: column;
+        margin-left: 4rem;
+        transition: max-height 0.3s ease-in-out;
+        transition: opacity 0.3s ease-in-out;
+    }
+
+    .hamburguesa h2 {
+        width: max-content;
+    }
+
+    #session {
+        margin-left: 0;
+        margin-bottom: 7rem;
+    }
+
+    .links {
+        display: none;
     }
 
     .header {
-        display: flex;
         flex-direction: column;
+        max-width: max-content;
     }
 
-    .imagenlogo {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-bottom: 3rem;
-    }
-}
-
-
-
-@media (min-width: 500px) and (max-width: 1028px) {
-    .header img {
+    .imagenlogo img {
+        margin: 0;
         width: 20rem;
-        margin-left: 0rem;
+        margin-left: 2.5rem;
+        margin-top: 3rem;
     }
 
-    .links {
-        margin-left: 1.3rem;
-        font-size: .6rem;
-        margin-top: 0;
-    }
-
-    #session {
-        margin-left: 2rem;
-    }
-
-    #iconbar {
-        width: 3rem;
-    }
-}
-
-@media (min-width: 1025px) and (max-width: 1280px) {
-    .header img {
-        width: 15rem;
-    }
-
-    .links {
-        margin-left: 1.3rem;
-        font-size: .7rem;
-        margin-top: 0;
-    }
-
-    #session {
-        margin-left: 2rem;
-    }
-
-    #iconbar {
-        width: 3rem;
-    }
-}
-
-@media (max-width: 767px) {
-    .imagenlogo {
-        display: block;
-        text-align: center;
-    }
-
-    .links {
-        display: flex;
-        flex-direction: column;
+    #session{
         margin-left: 0;
     }
+}
 
-    .header {
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+    #iconbar {
         display: block;
+        margin: 0;
+        margin-top: 7rem;
+        margin-bottom: 4rem;
+        width: 6rem;
+        margin-left: 22rem;
     }
 
-    #session {
-        margin-left: 2rem;
-    }
-
-    #iconbar {
-        margin-left: 2rem;
-    }
-}
-
-
-
-
-
-@media (min-width: 1280px) and (max-width: 1600px) {
-    .links {
-        margin-left: 2rem;
-    }
-
-    #session {
-        margin-left: 2rem;
-    }
-
-    #iconbar {
-        margin-left: 2rem;
-
-    }
-}
-
-@media (min-width: 820px) and (max-width: 1024px) {
-    .links {
+    .hamburguesa {
+        width: max-content;
         display: flex;
         flex-direction: column;
+        margin-left: 6rem;
+        transition: max-height 0.3s ease-in-out;
+        transition: opacity 0.3s ease-in-out;
     }
 
-    .header {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .imagenlogo {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-bottom: 2rem;
-    }
-
-    .logo {
-        margin-top: 10rem;
-        position: relative;
-        top: 7rem;
-    }
-
-    .icons img {
-        width: 3rem;
-    }
-
-    .parent h2 {
+    .hamburguesa h2 {
+        width: max-content;
         font-size: 3rem;
     }
 
-    .parent h3 {
-        font-size: 2rem;
+    .links {
+        display: none;
     }
 
-    .parent {
-        margin-bottom: 20rem;
+    .header {
+        flex-direction: column;
     }
 
+    .imagenlogo img {
+        margin: 0;
+        width: 35rem;
+        margin-left: 7rem;
+        margin-top: 3rem;
+    }
+    .header{
+        width: max-content;
+    }
+    #session{
+        margin-left: 0;
+    }
+}
+
+
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+    #iconbar {
+        display: block;
+        margin: 0;
+        margin-top: 7rem;
+        margin-bottom: 4rem;
+        width: 8rem;
+        margin-left: 33rem;
+    }
+    .hamburguesa {
+        width: max-content;
+        display: flex;
+        flex-direction: column;
+        margin-left: 8rem;
+        transition: max-height 0.3s ease-in-out;
+        transition: opacity 0.3s ease-in-out;
+    }
+    #session{
+        margin-left: 0;
+    }
+
+    .hamburguesa h2 {
+        width: max-content;
+        font-size: 4rem;
+    }
+
+    .links {
+        display: none;
+    }
+
+    .header {
+        flex-direction: column;
+    }
+
+    .imagenlogo img {
+        margin: 0;
+        width: 45rem;
+        margin-left: 13rem;
+        margin-top: 3rem;
+    }
+}
+
+
+
+@media only screen and (min-width: 1200px) and (max-width: 1700px) {
+    .imagenlogo img {
+        width: 25rem;
+    }
+
+    .links {
+        margin-left: 2rem;
+    }
+
+    #session {
+        margin-left: 2rem;
+        font-size: 1.5rem;
+    }
 }
