--- a/src/styles/page1.css
+++ b/src/styles/page1.css
@@ -38,8 +38,8 @@ img{
     position: relative;
     bottom: 40rem;
     font-size: 2rem;
-    left: 30rem;
-    background-color: blueviolet;
+    left: 37rem;
+    background: linear-gradient(to right, rgb(130, 94, 246), rgb(60, 50, 163));
     width: 50rem;
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
